<resources>
    <string name="app_name">FlowerAudio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">1021048313</string>
    <string name="nav_header_subtitle">1021048313@qq.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

<!--    侧边栏内容-->
    <string name="menu_home">主页</string>
    <string name="menu_login">登录</string>
    <string name="menu_assess">评价</string>
    <string name="menu_privacy">隐私政策</string>
    <string name="menu_donate">支持作者</string>
    <string name="menu_setting">设置</string>
</resources>