<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fun.zhon.floweraudio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_login"
        android:name="fun.zhon.floweraudio.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_assess"
        android:name="fun.zhon.floweraudio.ui.assess.AssessFragment"
        android:label="@string/menu_assess"
        tools:layout="@layout/fragment_assess" />
    <fragment
        android:id="@+id/nav_privacy"
        android:name="fun.zhon.floweraudio.ui.privacy.PrivacyFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_privacy" />
    <fragment
        android:id="@+id/nav_donate"
        android:name="fun.zhon.floweraudio.ui.donate.DonateFragment"
        android:label="@string/menu_donate"
        tools:layout="@layout/fragment_donate" />
</navigation>